--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dt-backend",
   "version": "1.0.0",
   "description": "Tinder for Dev",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev" : "nodemon server.js"
+    "start": "node src/app.js",
+    "dev" : "nodemon src/app.js"
   },
   "author": "Aryan",
   "license": "ISC",
